# MLClassifySimple

./: README - graphviz.md  README.md  pyproject.toml
Notebooks/: 01_ML_Classific_tracking.ipynb  02_ML_Classific_completion.ipynb  03_ML_Classific_sold.ipynb  0_ML_exemplo.ipynb  1_ML_Classific_tracking.ipynb
