[project]
name = "MLClassifySimple"
version = "0.1.0"
description = ""
authors = [
    { name = "Espedito Ferreira Alves", email = "espeditoalves123@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "matplotlib (>=3.10.3,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "scikit-learn (>=1.6.1,<2.0.0)", "graphviz (==0.10)"]

[tool.poetry]
packages = [{ include = "MLClassifySimple", from = "src" }]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

